crates/kdl-config-derive/tests/ui/invalid_render.stderr
error: unknown render placement: 'nope'
 --> tests/ui/invalid_render.rs:5:20
  |
5 |     #[kdl(render = "nope")]
  |                    ^^^^^^
